Updates from Overleaf

--- a/ew495-fa2020-honorsfish.tex
+++ b/ew495-fa2020-honorsfish.tex
@@ -11,6 +11,8 @@
     Abstract here. Evangelista can copy from the poster. 
 \end{abstract}
 
+% for stuff from 502 you want me to add in just tell me what sections/pages from your 502 reports and I'll get them in here and then smooth them over
+
 \section{Introduction}
 \subsection{Toy model}
 \subsection{3-axis test rig}
