--- a/ew495-fa2020-honorsfish.tex
+++ b/ew495-fa2020-honorsfish.tex
@@ -4,13 +4,13 @@
 \usepackage{wrcecapstone}
 
 \title{Bio-inspired flapping foil propulsion for enhanced maneuverability of unmanned underwater vehicles}
-\author{MIDN 1/C J Kenneally, III and MIDN 1/C E Klatt\thanks{Authors are with the Department of Weapons, Robotics, and Control Engineering at the United States Naval Academy. Addresses for correspondence \emph{m213402@usna.edu} and \emph{m213546@usna.edu}.}}
+\author{MIDN 1/C J J Kenneally, III and MIDN 1/C E L  Klatt\thanks{Authors are with the Department of Weapons, Robotics, and Control Engineering at the United States Naval Academy. Addresses for correspondence \emph{m213402@usna.edu} and \emph{m213546@usna.edu}.}}
 \date{December 3, 2020}
 
 % For EW495 title page
 \usepackage{titlepage4956}
 \coursenumber{EW495}
-\student{MIDN 1/C J Kenneally, III and MIDN 1/C E Klatt}
+\student{MIDN 1/C J J Kenneally, III and MIDN 1/C E L Klatt}
 \advisor{Assistant Professor D. Evangelista}
 %\coverpicture{\includegraphics[height=1.88in]{\myroot/figures/problem-statement-1a.png}}
 
@@ -22,7 +22,7 @@
 %\maketitlepage
 \maketitle
 \begin{abstract}
-    Abstract here. Evangelista can copy from the poster. 
+High $L/D$ unmanned underwater vehicles (UUVs) are typically optimized for ahead propulsion and do not maneuver well in confined environments or during launch and recovery.  We are developing \textbf{``pop-out'' bioinspired flapping foil auxiliary propulsion} for UUVs based on \textbf{fish locomotion} in the \emph{Tetraodontiformes}, including pufferfish, triggerfish, and \emph{Mola mola}, the ocean sunfish.  This group uses median/paired fins (MPF), other than the caudal fin, to accomplish maneuvers in forward and lateral directions seamlessly.  During fall 2020, our efforts have developed an idealized 2D model of flapping, to guide early design, as well as initial hardware for hydrodynamic testing. In spring 2021, we plan to demonstrate bio-inspired flapping fins on a high $L/D$, cylindrical midbody shape, to test potential improvements in low speed maneuverability.
 \end{abstract}
 
 \begin{IEEEkeywords}
@@ -32,7 +32,36 @@ keywords here
 % for stuff from 502 you want me to add in just tell me what sections/pages from your 502 reports and I'll get them in here and then smooth them over
 
 \section{Introduction}
+Fish are maneuverable; UUVs not as much. 
+\begin{figure}
+\begin{center}
+\includegraphics[width=\columnwidth]{figures/fig1.png}
+\end{center}
+\caption{\textbf{Fish have many fins; some are used for auxiliary propulsion and maneuvering.}  Fish in the \emph{Tetraodontiformes} use median and paired fins (MPF), other than the caudal fin, to maneuver.}
+\end{figure}
+\begin{figure}
+\begin{center}
+\includegraphics[width=\columnwidth]{figures/fig2.png}
+\end{center}
+\caption{Large $L/D$ torpedo-shaped UUVs often do not maneuver well. \textbf{Can we apply fish fins to UUVs for naval applications that require maneuvering in confined areas, recovery and handling, etc.}}
+\end{figure}
+
 \subsection{Toy model}
+\begin{figure}
+\begin{center}
+\includegraphics[width=\columnwidth]{figures/fig4.eps}
+\end{center}
+\caption{Example control map from 2D analysis in Matlab. Map will eventually be used for high level motion planning.}
+\end{figure}
+\begin{itemize}
+\item Assume low advance ratio $J$
+\item Obtain relative velocity and $\alpha$
+\item Use empirical $C_L$, $C_D$
+\item Rotate resultant forces to vehicle coordinates
+\item Create a map of force for foil sway $v$, angle $\psi$
+\end{itemize}
+
+
 \subsection{3-axis test rig}
 The tethered test rig will be implemented next semester.  Utilizing the SURF in Hopper Hall, hardware experimentation will occur.  The goal of the test rig is to create a foil pattern for desired motion of the unmanned underwater vehicle.  Various phase angles will be tested to produce the desired angular movement of the UUV for low speed maneuverability.  Additionally, the results from experimentation will result in the compilation of a blending algorithm for seamless operation at low speed.  The algorithm will incorporate horizontal and vertical movement to ensure 3-axis functionality.  The ultimate goal is for the blending algorithm and the phase angle pattern is to enable low speed maneuverability of the UUV.  Low speed maneuverability enables recovery of UUVs and improved functionality in confined environments.  
 
@@ -56,6 +85,31 @@ The test rig will have a tethered power source.  This power source will also eli
 Evangelista will copy from poster
 \subsection{3-axis test rig}
 There are no current results from the 3-axis test rig.  The intention is to get into the Hopper Hall SURF early in the spring to begin test rig.  Results for the test rig come in the form of 3D printed fins.  Due to COVID-19 restrictions, limited progress could be made in 3D printing fins.  Additionally, there was a need to relearn using Autodesk and Makerbot.  An elementary fin was printed, but details of dimensions need refined.  Moreover, the plastic material common for 3D printing creates a rigid structure inconsistent with the flexible material of fish fins.  To alleviate this inconsistency, the intention is to utilize resin material to print appropriately dimensioned fish fins mirroring the pectoral fins of the mola mola or triggerfish.
+
+\begin{figure}
+\begin{center}
+\includegraphics[height=\columnwidth]{figures/fig6.png}
+\end{center}
+\caption{Exploded view of initial prototype of bioinspired fin for hydrodynamics testing. First axis provides lateral movement (sway); second axis provides rotation (yaw).}
+\end{figure}
+
+\begin{itemize}
+\item Simplified model requires empirical testing
+\item 2 or 3 axes, modular fin
+\item Hitec HS646WP actuators
+\item Arduino or Raspberry Pi
+\item ROS2 interface, mockup of final control scheme
+\item Potential \textbf{instrumented smart fin}, with proprioception, force \& flow sensing
+\item Fin flexibility, shape
+\end{itemize}
+
+\subsection{Modular fin designs}
+\begin{figure}
+\begin{center}
+\includegraphics[width=\columnwidth]{figures/fig7.png}
+\end{center}
+\caption{Solid model of example fin design and resulting 3D print. \textbf{Modular design} allows swap out of alternative fin shapes, stiffnesses, or \textbf{smart fins} with embedded instrumentation.}
+\end{figure}
 
 \section{Discussion}
 \subsection{What We Learned}
@@ -89,18 +143,31 @@ Simulation challenges
  control algorithm connecting fins to directionality
  raspberry pi
  
- 
- 
+\begin{itemize}
+\item Actuator testing
+\item Testing on free, cylindrical body
+\item \textbf{Use of Hopper Hall SURF} 
+\item Synergy with turtle fin \textbf{amphibious} effort
+\item Initial \textbf{instrumented smart fin}
+\end{itemize}
 
+\subsection{Control of fin stroke}
+If we consider a complete fin stroke as a trajectory through the control map, \textbf{can we use variational methods to find an ``optimal'' stroke?}
+\begin{itemize}
+\item \textbf{Highest force} production in a desired direction
+\item \textbf{Most efficient} in a desired direction
+\item \textbf{Least movement} for a required force
+\end{itemize}
 
 \section*{Acknowledgements}
+We thank our sponsor W Sandberg. We thank A Laun and D Fredriksson for taking interest in our project and facilitating the simulation creation.  We thank CAPT B Baker for assistance with rapid prototyping. Finally, we thank our sister project to develop turtle flippers, MIDN 1/C C Ashley, G Brothers, and C Douglas; and MIDN 2/C C Smith. The project is also funded by Lockheed Martin.
 
 % Don't worry about references at all I can handle that
 \bibliography{IEEEabrv,\myroot/references/honorsfish.bib}
 
 \begin{IEEEbiography}%
 [{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{\myroot/figures/M213402.jpg}}]%
-{James Kenneally III} is a midshipman at the United States Naval Academy majoring in Robotics and Control Engineering (Honors). Upon graduation, he will do (service selection here). 
+{James J Kenneally III} is a midshipman at the United States Naval Academy majoring in Robotics and Control Engineering (Honors). Upon graduation, he will do (service selection here). 
 \end{IEEEbiography}
 
 \begin{IEEEbiography}%
