Updates from Overleaf

--- a/ew495-fa2020-honorsfish.tex
+++ b/ew495-fa2020-honorsfish.tex
@@ -8,7 +8,8 @@
 \date{December 3, 2020}
 
 % For EW495 title page
-\usepackage{titlepage4956}
+%\usepackage{titlepage4956}
+\usepackage{wrcetitlepage}
 \coursenumber{EW495}
 \student{MIDN 1/C J J Kenneally, III and MIDN 1/C E L Klatt}
 \advisor{Assistant Professor D. Evangelista}
